--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,7 @@ blockquote {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
@@ -36,3 +37,6 @@ img {
 button {
   font: inherit;
 }
+
+
+
