--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  height: 293px;
+  min-height: 293px;
   padding: 90px 50px 96px;
   font-family: Raleway;
   font-weight: 400;
@@ -65,9 +65,13 @@
 .address {
   width: 240px;
   font-family: Raleway;
-font-weight: 400;
-font-size: 18px;
+  font-weight: 400;
+  font-size: 18px;
   font-style: normal;
+  font-family: Raleway;
+  line-height: 24.3px;
+
+
 
 
 }
@@ -82,14 +86,13 @@ font-size: 18px;
 /* COVER STYLES */
 .cover {
   position: relative;
-  z-index: -1;
+  z-index: -2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 757px;
+  min-height: 757px; 
   color: white;
-  /* background-color: greenyellow; */
   background-image: url("../images/cover.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -161,66 +164,193 @@ background-color: transparent;
 
 /* LOTS STYLES */
 .lots {
-  background-color: blueviolet;
+  padding: 180px 24px 0;
 }
 .lots__heading {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  padding-left: 40px;
+  padding-bottom: 33px;
+
 }
 .lots__card-list {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  list-style: none;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
 }
 .lots__card-list-item {
+  
 }
 .card-link {
+
 }
 .card {
-  background-color: red;
+  position: relative;
+  overflow: hidden;
+  min-height: 596px;
+  width: 334px;
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: white;
+  
 }
 .card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+  z-index: -2;
 }
 .card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+  z-index: -2;
+
 }
 .card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
+  z-index: -2;
+
 }
 .card__heading {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  
+
+}
+
+.card__text-container{
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .card__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0%;
+
 }
 .lots__look-more-link {
+  padding-left: 40px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-decoration: underline;
+
 }
 
 /* ABOUT STYLES */
 .about {
-  background-color: orange;
+  display: grid;
+  gap: 25px;
+  grid-template-columns: 334px 1fr;
+  padding: 123px 24px 180px;
 }
 .about__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .about__logo {
+  background-color: black;
+  border-radius: 120px;
+  width: 240px;
+  height: 240px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  margin-left: 47px;
 }
 .about__logo-image {
+  height: 114px;
+  width: 148px;
 }
 .about__title {
+font-family: Raleway;
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+letter-spacing: 0%;
+text-transform: uppercase;
+margin: 136px 0 106px;
+
 }
 .about__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0%;
+
+}
+
+.first-paragraph {
+  margin-bottom: 22px;
+  padding-right: 5px;
+
 }
 
 /* FOOTER STYLES */
 .footer {
-  background-color: aqua;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
+  padding: 0 50px;
+  
 }
 .footer__menu {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+
 }
 .footer__menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 .footer__menu-list-item {
+  text-decoration: underline;
+
 }
 .footer__menu-link {
 }
 .footer__menu-link_active {
+  text-decoration: none;
 }
 .footer__social-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  justify-content: end;
+
 }
 .footer__social-list-item {
 }
 .footer__social-link {
 }
 .footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
