--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,8 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  min-height: 293px;
-  padding: 90px 50px 96px;
-  font-family: Raleway;
+  padding: 90px 50px 92px;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24.3px;
@@ -19,9 +18,8 @@
   list-style: circle;
 }
 
-.menu__span {
-  position: relative;
-  left: 3px;
+.header__menu__link-container {
+  margin-left: 3px;
 }
 
 .header__links-list-item_no-bullit {
@@ -52,7 +50,7 @@
 /* ADRESS STYLES */
 .address {
   width: 240px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -68,7 +66,6 @@
 /* COVER STYLES */
 .cover {
   position: relative;
-  z-index: -2;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -82,8 +79,9 @@
 }
 
 .cover__title {
+  z-index: 1;
   padding: 165px 50px 106px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 100px;
   line-height: 1.15em;
@@ -114,6 +112,7 @@
 }
 
 .cover__description {
+  z-index: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -122,7 +121,7 @@
 }
 
 .cover__description-text {
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
@@ -131,10 +130,10 @@
 }
 
 .bet-button {
-  border: 1px solid white;
+  border: 1px solid currentColor;
   padding: 12px 32px 11px 31px;
   color: white;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 22px;
   line-height: 100%;
@@ -146,7 +145,7 @@
 
 .overlay {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   width: 100%;
   height: 100%;
   opacity: 0.6;
@@ -161,7 +160,7 @@
 .lots__heading {
   padding-bottom: 33px;
   padding-left: 40px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 40px;
   line-height: 100%;
@@ -183,7 +182,6 @@
   display: flex;
   width: 334px;
   min-height: 596px;
-  overflow: hidden;
   color: white;
   background-repeat: no-repeat;
   background-position: center;
@@ -191,22 +189,20 @@
 }
 
 .card_type_film {
-  z-index: -2;
   background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-  z-index: -2;
   background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-  z-index: -2;
   background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__heading {
-  font-family: Raleway;
+  z-index: 1;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
@@ -216,6 +212,7 @@
 }
 
 .card__text-container {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -223,7 +220,7 @@
 }
 
 .card__text {
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -232,7 +229,7 @@
 
 .lots__look-more-link {
   padding-left: 40px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 100%;
@@ -273,7 +270,7 @@
 
 .about__title {
   margin: 136px 0 106px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 40px;
   line-height: 100%;
@@ -282,14 +279,14 @@
 }
 
 .about__text {
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0%;
 }
 
-.first-paragraph {
+.paragraph-starting {
   margin-bottom: 22px;
   padding-right: 5px;
 }
@@ -299,11 +296,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
-  padding: 0 50px;
+  padding: 3px 50px 82px;
 }
 
 .footer__menu {
-  font-family: Raleway;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
